<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/kk"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".SignUp">
    <TextView
        android:id="@+id/tx_1"
        android:layout_width="match_parent"
        android:text="@string/signup"
        android:gravity="center"
        android:paddingTop="70dp"
        android:paddingBottom="30dp"
        android:textColor="@color/green"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_height="wrap_content"/>
    <View
        android:id="@+id/v_1"
        android:layout_width="match_parent"
        android:layout_below="@+id/tx_1"
        android:background="@color/blue"
        android:layout_height="2dp"/>
    <TextView
        android:id="@+id/tx_2"
        android:layout_width="match_parent"
        android:layout_below="@+id/v_1"
        android:text="@string/name"
        android:paddingTop="20dp"
        android:paddingBottom="0dp"
        android:textColor="@color/green"
        android:paddingStart="25dp"
        android:paddingEnd="30dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/et_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tx_2"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/shapes"
        android:hint="@string/enter_name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:minHeight="50dp"
        android:autofillHints="name"
        android:drawablePadding="10dp"
        android:inputType="text" />
    <TextView
        android:id="@+id/tx_3"
        android:layout_width="match_parent"
        android:layout_below="@+id/et_1"
        android:text="@string/lname"
        android:paddingTop="20dp"
        android:paddingBottom="0dp"
        android:textColor="@color/green"
        android:paddingStart="25dp"
        android:paddingEnd="30dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/et_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tx_3"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/shapes"
        android:hint="@string/last_name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:minHeight="50dp"
        android:autofillHints="name"
        android:drawablePadding="10dp"
        android:inputType="text" />
    <TextView
        android:id="@+id/tx_4"
        android:layout_width="match_parent"
        android:layout_below="@+id/et_2"
        android:text="@string/email"
        android:paddingTop="20dp"
        android:paddingBottom="0dp"
        android:textColor="@color/green"
        android:paddingStart="25dp"
        android:paddingEnd="30dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/et_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tx_4"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/shapes"
        android:hint="@string/enter_email"
        android:textSize="20sp"
        android:textStyle="bold"
        android:minHeight="50dp"
        android:autofillHints="emailAddress"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="10dp"
        android:inputType="textEmailAddress" />
    <TextView
        android:id="@+id/tx_5"
        android:layout_width="match_parent"
        android:layout_below="@+id/et_3"
        android:text="@string/password"
        android:paddingTop="10dp"
        android:paddingBottom="0dp"
        android:textColor="@color/green"
        android:paddingStart="25dp"
        android:paddingEnd="30dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/et_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tx_5"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/shapes"
        android:hint="@string/enter_password"
        android:textSize="20sp"
        android:textStyle="bold"
        android:minHeight="50dp"
        android:autofillHints="password"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="10dp"
        android:inputType="textPassword" />
    <Button
        android:layout_width="match_parent"
        android:id="@+id/bt_1"
        android:layout_below="@id/et_4"
        android:text="@string/signup"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/shapes"
        android:textSize="25sp"
        style="@style/ButtonNoBackground"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:id="@+id/tx_6"
        android:layout_below="@+id/bt_1"
        android:text="@string/almember"
        android:textSize="25sp"
        android:textColor="@color/green"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="60dp"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/bt_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bt_1"
        android:layout_marginStart="220dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@android:color/transparent"
        android:minHeight="48dp"
        android:text="@string/signin"
        android:textColor="@color/green"
        android:textSize="25sp"
        tools:ignore="TouchTargetSizeCheck" />


</RelativeLayout>