<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/cyan"
    android:layout_height="match_parent"
    tools:context=".UserLogin">
    <ImageView
        android:layout_width="match_parent"
        android:src="@drawable/kk"
        android:scaleType="fitXY"
        android:layout_height="match_parent"
        android:contentDescription="@string/img_2" />
    <TextView
        android:id="@+id/txt_1"
        android:layout_width="match_parent"
        android:text="@string/login"
        android:gravity="center"
        android:paddingTop="70dp"
        android:paddingBottom="30dp"
        android:textColor="@color/green"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_height="wrap_content"/>
    <View
        android:id="@+id/v1"
        android:layout_width="match_parent"
        android:layout_below="@+id/txt_1"
        android:background="@color/blue"
        android:layout_height="2dp"/>
    <TextView
        android:id="@+id/txt_2"
        android:layout_width="match_parent"
        android:layout_below="@+id/v1"
        android:text="@string/email"
        android:paddingTop="20dp"
        android:paddingBottom="0dp"
        android:textColor="@color/green"
        android:paddingStart="25dp"
        android:paddingEnd="30dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edt_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_2"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/shapes"
        android:hint="@string/enter_email"
        android:textSize="20sp"
        android:textStyle="bold"
        android:minHeight="50dp"
        android:autofillHints="emailAddress"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="10dp"
        android:inputType="textEmailAddress" />
    <TextView
        android:id="@+id/txt_3"
        android:layout_width="match_parent"
        android:layout_below="@+id/edt_1"
        android:text="@string/password"
        android:paddingTop="10dp"
        android:paddingBottom="0dp"
        android:textColor="@color/green"
        android:paddingStart="25dp"
        android:paddingEnd="30dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edt_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_3"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/shapes"
        android:hint="@string/enter_password"
        android:textSize="20sp"
        android:textStyle="bold"
        android:minHeight="50dp"
        android:autofillHints="password"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="10dp"
        android:inputType="textPassword" />

    <Switch
        android:id="@+id/s1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_2"
        android:minHeight="48dp"
        android:paddingStart="30dp"
        android:paddingTop="10dp"
        android:paddingEnd="5dp"
        android:paddingBottom="10dp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />
    <TextView
        android:id="@+id/txt_4"
        android:layout_width="wrap_content"
        android:layout_below="@id/edt_2"
        android:text="@string/me"
        android:paddingStart="70dp"
        android:paddingEnd="15dp"
        android:paddingTop="8dp"
        android:paddingBottom="10dp"
        android:textSize="20sp"
        android:textColor="@color/green"
        android:textStyle="bold"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btn_1"
        android:layout_width="wrap_content"
        android:layout_below="@id/edt_2"
        android:text="@string/forget"
        android:layout_marginStart="190dp"
        android:layout_marginEnd="1dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:textColor="@color/green"
        android:background="@drawable/btnline"
        android:outlineProvider="none"
        android:layout_height="wrap_content"/>
    <Button
        android:layout_width="match_parent"
        android:id="@+id/btn_2"
        android:layout_below="@id/edt_2"
        android:text="@string/login"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/shapes"
        android:textSize="25sp"
        style="@style/ButtonNoBackground"
        android:layout_height="wrap_content"/>
    <View
        android:layout_width="wrap_content"
        android:id="@+id/v2"
        android:layout_below="@+id/btn_2"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="290dp"
        android:background="@color/white"
        android:layout_height="2dp"/>
    <TextView
        android:layout_width="match_parent"
        android:id="@+id/txt_5"
        android:layout_below="@+id/btn_2"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="50dp"
        android:text="@string/with"
        android:textSize="25sp"
        android:textColor="@color/cyan"
        android:textStyle="bold"
        android:layout_height="wrap_content"/>
    <View
        android:layout_width="wrap_content"
        android:id="@+id/v3"
        android:layout_below="@+id/btn_2"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="290dp"
        android:layout_marginEnd="30dp"
        android:background="@color/white"
        android:layout_height="2dp"/>
    <ImageView
        android:id="@+id/img1"
        android:layout_width="100dp"
        android:layout_margin="20dp"
        android:src="@drawable/google"
        android:layout_below="@id/v2"
        android:layout_height="80dp"
        android:contentDescription="@string/img" />

    <ImageView
        android:id="@+id/img2"
        android:layout_width="100dp"
        android:layout_below="@+id/txt_5"
        android:layout_marginStart="140dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_height="80dp"
        android:src="@drawable/apple"
        android:contentDescription="@string/img" />
    <ImageView
        android:id="@+id/img3"
        android:layout_width="100dp"
        android:layout_below="@+id/v3"
        android:layout_marginStart="250dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        android:layout_height="80dp"
        android:src="@drawable/facebook"
        android:contentDescription="@string/img" />
    <TextView
        android:layout_width="match_parent"
        android:id="@+id/txt_6"
        android:layout_below="@+id/btn_2"
        android:text="@string/member"
        android:textSize="25sp"
        android:textColor="@color/green"
        android:textStyle="bold"
        android:layout_marginTop="180dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="60dp"
        android:layout_height="wrap_content"/>
    <Button
        android:layout_width="wrap_content"
        android:id="@+id/btn_3"
        android:layout_below="@id/btn_2"
        android:text="@string/signup"
        android:layout_marginTop="170dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="200dp"
        android:layout_marginEnd="20dp"
        android:background="@android:color/transparent"
        android:textSize="25sp"
        android:textColor="@color/green"
        android:layout_height="wrap_content"/>
</RelativeLayout>